tests/src/main/java/kendal/test/negative/inherit/Inherit_OverrideRequiredParam_InvalidValue_Test.out
Inherit_OverrideRequiredParam_InvalidValue_Test.java:20:39: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.String, int)
1 error